Completely redesigned the website

--- a/index.html
+++ b/index.html
@@ -1,96 +1,817 @@
 <!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>A new home for ASCIIMathML by asciimath</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+<html lang="en-US">
+<head>
+	<meta charset="UTF-8">
+	<title>AsciiMath</title>
+	<link href='http://fonts.googleapis.com/css?family=Jockey+One|Quicksand|Asap'
+	      rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="css/screen.css"/>
+</head>
+<body>
 
-  </head>
-  <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/asciimath">View On GitHub</a></li>
-        </nav>
-      </div><!-- end header -->
+<a id="forkMe" href="https://github.com/mathjax/asciimathml">
+	Fork me on GitHub
+</a>
 
-    <div class="wrapper">
+<div id="wrapper">
 
-      <section>
-        <div id="title">
-          <h1>A new home for ASCIIMathML</h1>
-          <p>Translating ASCII math notation to MathML and graphics</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/asciimath">asciimath</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
+<nav>
+	<h1>AsciiMath</h1>
 
-        <h3>
-<a name="welcome-to-asciimathml" class="anchor" href="#welcome-to-asciimathml"><span class="octicon octicon-link"></span></a>Welcome to ASCIIMathML</h3>
+	<div id="links">
+		<a href="#about">about</a>
+		<a href="#gettingStarted">getting started</a>
+		<a href="#syntax">syntax</a>
+	</div>
+</nav>
 
-<p>Would you like to easily produce good-looking math formulas on webpages using a simple calculator-style syntax and your own ASCII or HTML editor? Here is a free multi-platform solution (and if you prefer it, LaTeX-style formulas also work). </p>
+<article>
+<section id="about">
+	<h2>About</h2>
 
-<h3>
-<a name="github-repository" class="anchor" href="#github-repository"><span class="octicon octicon-link"></span></a>Github repository</h3>
+	<p>AsciiMath is an easy to write markup language for mathematics.<br>
+		Try it out in the interactive renderer:</p>
 
-<p>ASCIIMathML development is now organized on github at <a href="https://github.com/mathjax/asciimathml">https://github.com/mathjax/asciimathml</a></p>
+	<div class="leftColumn">
+		<label for="demoSource">Input:</label>
+		<br/>
 
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+		<textarea class="ioArea" id="demoSource">
+			sum_(i=1)^n i^3=((n(n+1))/2)^2
+		</textarea>
+	</div>
 
-<ul>
-<li>Peter Jipsen (<a href="https://github.com/jipsen" class="user-mention">@jipsen</a>), creator of ASCIIMathML</li>
-<li>David Lippman (<a href="https://github.com/drlippman" class="user-mention">@drlippman</a>)</li>
-<li>Adrian Sieber (<a href="https://github.com/adius" class="user-mention">@adius</a>)</li>
-</ul><h3>
-<a name="related-projects" class="anchor" href="#related-projects"><span class="octicon octicon-link"></span></a>Related projects</h3>
+	<div class="rightColumn">
+		<label for="demoRendering">Rendering:</label>
+		<br/>
 
-<h3>
-<a name="syntax" class="anchor" href="#syntax"><span class="octicon octicon-link"></span></a>Syntax</h3>
+		<div class="ioArea" id="demoRendering">
+			`sum_(i=1)^n i^3=((n(n+1))/2)^2`
+		</div>
+	</div>
+</section>
 
-<p>The main aims of the ASCIIMathML syntax are: </p>
+<section id="gettingStarted">
+	<h2>Getting Started</h2>
 
-<ol>
-<li>close to standard mathematical notation </li>
-<li>easy to read </li>
-<li>easy to type</li>
-</ol><p>You can use your favorite editor to write HTML pages that use this JavaScript program. If the page is viewed by a browser that does not support MathML or JavaScript, the ASCII formulas are still quite readable. Most users will not have to read the technicalities on this page. If you type</p>
+	<p>In order to get started you have two options:</p>
 
-<pre><code>amath x^2 or a_(m n) or a_{m n} or (x+1)/y or sqrtx endamath
-</code></pre>
+	<ol>
+		<li>
+			Use <a href=http://mathjax.org/>MathJax</a> to render your formulas.
+			MathJax is a full fledged open source JavaScript display engine for
+			mathematics and works in all browsers.<br/>
+			This is the recommended approach!
+		</li>
+		<li>
+			<p>Load the AsciiMath javascript file
+				(<a href="http://git.io/X84VQQ">get it on GitHub</a>)
+				in either the <code>head</code> or the <code>body</code>
+				tag of your website like this:</p>
 
-<p>you pretty much get what you expect: amath x^2 or a_(m n) or a_{m n} or (x+1)/y or sqrtx endamath. The a``math … enda``math tokens are used to start/stop the <strong>new auto-math-recognize mode</strong>. Of course one can still use the \`…\` back-quotes to delimit math formulas explicitly (\\$…\\$ should only be used for LaTeX formulas). The choice of grouping parenthesis is up to you (they don’t have to match either). If the displayed expression can be parsed uniquely without them, they are omitted. Printing the table of constant symbols (below) may be helpful (but is not necessary if you know the LaTeX equivalents).</p>
+			<p><code>&lt;script type=&quot;text/javascript&quot;
+				src=&quot;ASCIIMathML.js&quot;&gt;&lt;/script&gt;</code></p>
 
-<p>It is hoped that this simple input format for MathML will further encourage its use on the web. The remainder of this page gives a fairly detailed specification of the ASCII syntax. <strong>The expressions described here correspond to a wellspecified subset of Presentation MathML and behave in a predictable way.</strong></p>
+			<p>This file contains JavaScript to convert AsciiMath
+				notation and (some) LaTeX to Presentation MathML. The conversion
+				is done while the HTML page loads.</p>
 
-<p>The syntax is very permissive and does not generate syntax errors. This allows mathematically incorrect expressions to be displayed, which is important for teaching purposes. It also causes less frustration when previewing formulas.</p>
+			<mark>Attention: Currently this only works in
+				Firefox 3+ and Safari 5.1+ and an implementation for Chrome is
+				<a href=https://chromestatus.com/features/5240822173794304>
+					no longer pursued
+				</a>.
+			</mark>
+		</li>
+	</ol>
+</section>
 
-<p>The parser uses no operator precedence and only respects the grouping brackets, subscripts, superscript, fractions and (square) roots. This is done for reasons of efficiency and generality. The resulting MathML code can quite easily be processed further to ensure additional syntactic requirements of any particular application.</p>
+<section id="syntax">
+<h2>Syntax</h2>
 
-<p><strong>The grammar:</strong> Here is a definition of the grammar used to parse ASCIIMathML expressions. In the Backus-Naur form given below, the letter on the left of the ::= represents a category of symbols that could be one of the possible sequences of symbols listed on the right. The vertical bar | separates the alternatives.</p>
+<table>
+	<caption>Operation symbols</caption>
+	<thead>
+	<tr>
+		<th>Type</th>
+		<th>See</th>
+	</tr>
+	</thead>
+	<tbody>
+	<tr>
+		<td>+</td>
+		<td>`+`</td>
+	</tr>
+	<tr>
+		<td>-</td>
+		<td>`-`</td>
+	</tr>
+	<tr>
+		<td>*</td>
+		<td>`*`</td>
+	</tr>
+	<tr>
+		<td>**</td>
+		<td>`**`</td>
+	</tr>
+	<tr>
+		<td>***</td>
+		<td>`***`</td>
+	</tr>
+	<tr>
+		<td>//</td>
+		<td>`//`</td>
+	</tr>
+	<tr>
+		<td>\\</td>
+		<td>`\\`</td>
+	</tr>
+	<tr>
+		<td>xx</td>
+		<td>`xx`</td>
+	</tr>
+	<tr>
+		<td>-:</td>
+		<td>`-:`</td>
+	</tr>
+	<tr>
+		<td>@</td>
+		<td>`@`</td>
+	</tr>
+	<tr>
+		<td>o+</td>
+		<td>`o+`</td>
+	</tr>
+	<tr>
+		<td>ox</td>
+		<td>`ox`</td>
+	</tr>
+	<tr>
+		<td>o.</td>
+		<td>`o.`</td>
+	</tr>
+	<tr>
+		<td>sum</td>
+		<td>`sum`</td>
+	</tr>
+	<tr>
+		<td>prod</td>
+		<td>`prod`</td>
+	</tr>
+	<tr>
+		<td>^^</td>
+		<td>`^^`</td>
+	</tr>
+	<tr>
+		<td>^^^</td>
+		<td>`^^^`</td>
+	</tr>
+	<tr>
+		<td>vv</td>
+		<td>`vv`</td>
+	</tr>
+	<tr>
+		<td>vvv</td>
+		<td>`vvv`</td>
+	</tr>
+	<tr>
+		<td>nn</td>
+		<td>`nn`</td>
+	</tr>
+	<tr>
+		<td>nnn</td>
+		<td>`nnn`</td>
+	</tr>
+	<tr>
+		<td>uu</td>
+		<td>`uu`</td>
+	</tr>
+	<tr>
+		<td>uuu</td>
+		<td>`uuu`</td>
+	</tr>
+	</tbody>
+</table>
 
-<pre><code>c ::= [A-z] | numbers | greek letters | other constant symbols (see below)
+<table>
+	<caption>Miscellaneous symbols</caption>
+	<thead>
+	<tr>
+		<th>Type</th>
+		<th>See</th>
+	</tr>
+	</thead>
+	<tbody>
+	<tr>
+		<td>int</td>
+		<td>`int`</td>
+	</tr>
+
+	<tr>
+		<td>oint</td>
+		<td>`oint`</td>
+	</tr>
+	<tr>
+		<td>del</td>
+		<td>`del`</td>
+	</tr>
+	<tr>
+		<td>grad</td>
+		<td>`grad`</td>
+	</tr>
+	<tr>
+		<td>+-</td>
+		<td>`+-`</td>
+	</tr>
+	<tr>
+		<td>O/</td>
+		<td>`O/`</td>
+	</tr>
+	<tr>
+		<td>oo</td>
+		<td>`oo`</td>
+	</tr>
+	<tr>
+		<td>aleph</td>
+		<td>`aleph`</td>
+	</tr>
+	<tr>
+		<td>/_</td>
+		<td>`/_`</td>
+	</tr>
+	<tr>
+		<td>:.</td>
+		<td>`:.`</td>
+	</tr>
+	<tr>
+		<td>|...|</td>
+		<td>`|...|`</td>
+	</tr>
+	<tr>
+		<td>|cdots|</td>
+		<td>`|cdots|`</td>
+	</tr>
+	<tr>
+		<td>vdots</td>
+		<td>`vdots`</td>
+	</tr>
+	<tr>
+		<td>ddots</td>
+		<td>`ddots`</td>
+	</tr>
+	<tr>
+		<td>|\ |</td>
+		<td>`|\ |`</td>
+	</tr>
+	<tr>
+		<td>|quad|</td>
+		<td>`|quad|`</td>
+	</tr>
+	<tr>
+		<td>diamond</td>
+		<td>`diamond`</td>
+	</tr>
+	<tr>
+		<td>square</td>
+		<td>`square`</td>
+	</tr>
+	<tr>
+		<td>|__</td>
+		<td>`|__`</td>
+	</tr>
+	<tr>
+		<td>__|</td>
+		<td>`__|`</td>
+	</tr>
+	<tr>
+		<td>|~</td>
+		<td>`|~`</td>
+	</tr>
+	<tr>
+		<td>~|</td>
+		<td>`~|`</td>
+	</tr>
+	<tr>
+		<td>CC</td>
+		<td>`CC`</td>
+	</tr>
+	<tr>
+		<td>NN</td>
+		<td>`NN`</td>
+	</tr>
+	<tr>
+		<td>QQ</td>
+		<td>`QQ`</td>
+	</tr>
+	<tr>
+		<td>RR</td>
+		<td>`RR`</td>
+	</tr>
+	<tr>
+		<td>ZZ</td>
+		<td>`ZZ`</td>
+	</tr>
+	</tbody>
+</table>
+
+<table>
+	<caption>Relation symbols</caption>
+	<thead>
+	<tr>
+		<th>Type</th>
+		<th>See</th>
+	</tr>
+	</thead>
+	<tbody>
+	<tr>
+		<td>=</td>
+		<td>`=`</td>
+	</tr>
+	<tr>
+		<td>!=</td>
+		<td>`!=`</td>
+	</tr>
+	<tr>
+		<td>&lt;</td>
+		<td>`&lt;`</td>
+	</tr>
+	<tr>
+		<td>&gt;</td>
+		<td>`&gt;`</td>
+	</tr>
+	<tr>
+		<td>&lt;=</td>
+		<td>`&lt;=`</td>
+	</tr>
+	<tr>
+		<td>&gt;=</td>
+		<td>`&gt;=`</td>
+	</tr>
+	<tr>
+		<td>-&lt;</td>
+		<td>`-&lt;`</td>
+	</tr>
+
+	<tr>
+		<td>&gt;-</td>
+		<td>`&gt;-`</td>
+	</tr>
+	<tr>
+		<td>in</td>
+		<td>`in`</td>
+	</tr>
+	<tr>
+		<td>!in</td>
+		<td>`!in`</td>
+	</tr>
+	<tr>
+		<td>sub</td>
+		<td>`sub`</td>
+	</tr>
+	<tr>
+		<td>sup</td>
+		<td>`sup`</td>
+	</tr>
+	<tr>
+		<td>sube</td>
+		<td>`sube`</td>
+	</tr>
+	<tr>
+		<td>supe</td>
+		<td>`supe`</td>
+	</tr>
+	<tr>
+		<td>-=</td>
+		<td>`-=`</td>
+	</tr>
+	<tr>
+		<td>~=</td>
+		<td>`~=`</td>
+	</tr>
+	<tr>
+		<td>~~</td>
+		<td>`~~`</td>
+	</tr>
+	<tr>
+		<td>prop</td>
+		<td>`prop`</td>
+	</tr>
+	</tbody>
+</table>
+
+<table>
+	<caption>Greek Letters</caption>
+	<thead>
+	<tr>
+		<th>Type</th>
+		<th>See</th>
+		<th>Type</th>
+		<th>See</th>
+	</tr>
+	</thead>
+	<tbody>
+	<tr>
+		<td>alpha</td>
+		<td>`alpha`</td>
+	</tr>
+	<tr>
+		<td>beta</td>
+		<td>`beta`</td>
+	</tr>
+	<tr>
+		<td>chi</td>
+		<td>`chi`</td>
+	</tr>
+	<tr>
+		<td>delta</td>
+		<td>`delta`</td>
+		<td>Delta</td>
+		<td>`Delta`</td>
+	</tr>
+	<tr>
+		<td>epsilon</td>
+		<td>`epsilon`</td>
+	</tr>
+	<tr>
+		<td>varepsilon</td>
+		<td>`varepsilon`</td>
+	</tr>
+	<tr>
+		<td>eta</td>
+		<td>`eta`</td>
+	</tr>
+	<tr>
+		<td>gamma</td>
+		<td>`gamma`</td>
+		<td>Gamma</td>
+		<td>`Gamma`</td>
+	</tr>
+	<tr>
+		<td>iota</td>
+		<td>`iota`</td>
+	</tr>
+	<tr>
+		<td>kappa</td>
+		<td>`kappa`</td>
+	</tr>
+	<tr>
+		<td>lambda</td>
+		<td>`lambda`</td>
+		<td>Lambda</td>
+		<td>`Lambda`</td>
+	</tr>
+	<tr>
+		<td>mu</td>
+		<td>`mu`</td>
+	</tr>
+	<tr>
+		<td>nu</td>
+		<td>`nu`</td>
+	</tr>
+	<tr>
+		<td>omega</td>
+		<td>`omega`</td>
+		<td>Omega</td>
+		<td>`Omega`</td>
+	</tr>
+	<tr>
+	</tr>
+	<tr>
+		<td>phi</td>
+		<td>`phi`</td>
+		<td>Phi</td>
+		<td>`Phi`</td>
+	</tr>
+	<tr>
+		<td>varphi</td>
+		<td>`varphi`</td>
+	</tr>
+	<tr>
+		<td>pi</td>
+		<td>`pi`</td>
+		<td>Pi</td>
+		<td>`Pi`</td>
+	</tr>
+	<tr>
+		<td>psi</td>
+		<td>`psi`</td>
+		<td>Psi</td>
+		<td>`Psi`</td>
+	</tr>
+	<tr>
+		<td>rho</td>
+		<td>`rho`</td>
+	</tr>
+	<tr>
+		<td>sigma</td>
+		<td>`sigma`</td>
+		<td>Sigma</td>
+		<td>`Sigma`</td>
+	</tr>
+	<tr>
+		<td>tau</td>
+		<td>`tau`</td>
+	</tr>
+	<tr>
+		<td>theta</td>
+		<td>`theta`</td>
+		<td>Theta</td>
+		<td>`Theta`</td>
+	</tr>
+	<tr>
+		<td>vartheta</td>
+		<td>`vartheta`</td>
+	</tr>
+	<tr>
+		<td>upsilon</td>
+		<td>`upsilon`</td>
+	</tr>
+	<tr>
+		<td>xi</td>
+		<td>`xi`</td>
+		<td>Xi</td>
+		<td>`Xi`</td>
+	</tr>
+	<tr>
+		<td>zeta</td>
+		<td>`zeta`</td>
+	</tr>
+	</tbody>
+</table>
+
+
+<table>
+	<caption>Logical symbols</caption>
+	<thead>
+	<tr>
+		<th>Type</th>
+		<th>See</th>
+	</tr>
+	</thead>
+	<tbody>
+	<tr>
+		<td>and</td>
+		<td>`and`</td>
+	</tr>
+	<tr>
+		<td>or</td>
+		<td>`or`</td>
+	</tr>
+	<tr>
+		<td>not</td>
+		<td>`not`</td>
+	</tr>
+	<tr>
+		<td>=&gt;</td>
+		<td>`=&gt;`</td>
+	</tr>
+	<tr>
+		<td>if</td>
+		<td>`if`</td>
+	</tr>
+	<tr>
+		<td>iff</td>
+		<td>`iff`</td>
+	</tr>
+	<tr>
+		<td>AA</td>
+		<td>`AA`</td>
+	</tr>
+	<tr>
+		<td>EE</td>
+		<td>`EE`</td>
+	</tr>
+	<tr>
+		<td>_|_</td>
+		<td>`_|_`</td>
+	</tr>
+	<tr>
+		<td>TT</td>
+		<td>`TT`</td>
+	</tr>
+	<tr>
+		<td>|--</td>
+		<td>`|--`</td>
+	</tr>
+	<tr>
+		<td>|==</td>
+		<td>`|==`</td>
+	</tr>
+	</tbody>
+</table>
+
+<table>
+	<caption>Grouping brackets</caption>
+	<thead>
+	<tr>
+		<th>Type</th>
+		<th>See</th>
+	</tr>
+	</thead>
+	<tbody>
+	<tr>
+		<td>(</td>
+		<td>`(`</td>
+	</tr>
+	<tr>
+		<td>)</td>
+		<td>`)`</td>
+	</tr>
+	<tr>
+		<td>[</td>
+		<td>`[`</td>
+	</tr>
+	<tr>
+		<td>]</td>
+		<td>`]`</td>
+	</tr>
+	<tr>
+		<td>{</td>
+		<td>`{`</td>
+	</tr>
+	<tr>
+		<td>}</td>
+		<td>`}`</td>
+	</tr>
+	<tr>
+		<td>(:</td>
+		<td>`(:`</td>
+	</tr>
+	<tr>
+		<td>:)</td>
+		<td>`:)`</td>
+	</tr>
+	<tr>
+		<td>{:</td>
+		<td>`{:`</td>
+	</tr>
+	<tr>
+		<td>:}</td>
+		<td>`:}`</td>
+	</tr>
+	</tbody>
+</table>
+
+<table>
+	<caption>Arrows</caption>
+	<thead>
+	<tr>
+		<th>Type</th>
+		<th>See</th>
+	</tr>
+	</thead>
+	<tbody>
+	<tr>
+		<td>uarr</td>
+		<td>`uarr`</td>
+	</tr>
+	<tr>
+		<td>darr</td>
+		<td>`darr`</td>
+	</tr>
+	<tr>
+		<td>rarr</td>
+		<td>`rarr`</td>
+	</tr>
+	<tr>
+		<td>-&gt;</td>
+		<td>`-&gt;`</td>
+	</tr>
+	<tr>
+		<td>|-&gt;</td>
+		<td>`|-&gt;`</td>
+	</tr>
+	<tr>
+		<td>larr</td>
+		<td>`larr`</td>
+	</tr>
+	<tr>
+		<td>harr</td>
+		<td>`harr`</td>
+	</tr>
+	<tr>
+		<td>rArr</td>
+		<td>`rArr`</td>
+	</tr>
+	<tr>
+		<td>lArr</td>
+		<td>`lArr`</td>
+	</tr>
+	<tr>
+		<td>hArr</td>
+		<td>`hArr`</td>
+	</tr>
+	</tbody>
+</table>
+
+<table>
+	<caption>Accents</caption>
+	<thead>
+	<tr>
+		<th>Type</th>
+		<th>See</th>
+	</tr>
+	</thead>
+	<tbody>
+	<tr>
+		<td>hat x</td>
+		<td>`hat x`</td>
+	</tr>
+	<tr>
+		<td>bar x</td>
+		<td>`bar x`</td>
+	</tr>
+	<tr>
+		<td>ul x</td>
+		<td>`ul x`</td>
+	</tr>
+	<tr>
+		<td>vec x</td>
+		<td>`vec x`</td>
+	</tr>
+	<tr>
+		<td>dot x</td>
+		<td>`dot x`</td>
+	</tr>
+	<tr>
+		<td>ddot x</td>
+		<td>`ddot x`</td>
+	</tr>
+	</tbody>
+</table>
+
+<table>
+	<caption>Font commands</caption>
+	<thead>
+	<tr>
+		<th>Type</th>
+		<th>See</th>
+	</tr>
+	</thead>
+	<tbody>
+	<tr>
+		<td>bb "AaBbCc"</td>
+		<td>`bb "AaBbCc"`</td>
+	</tr>
+	<tr>
+		<td>bbb "AaBbCc"</td>
+		<td>`bbb "AaBbCc"`</td>
+	</tr>
+	<tr>
+		<td>cc "AaBbCc"</td>
+		<td>`cc "AaBbCc"`</td>
+	</tr>
+	<tr>
+		<td>tt "AaBbCc"</td>
+		<td>`tt "AaBbCc"`</td>
+	</tr>
+	<tr>
+		<td>fr "AaBbCc"</td>
+		<td>`fr "AaBbCc"`</td>
+	</tr>
+	<tr>
+		<td>sf "AaBbCc"</td>
+		<td>`sf "AaBbCc"`</td>
+	</tr>
+	</tbody>
+</table>
+
+<br/>
+
+<h3>Standard Functions</h3>
+
+<p>sin, cos, tan, csc, sec, cot, sinh, cosh,
+tanh, log, ln, det, dim, lim, mod, gcd, lcm, min, max</p>
+
+<br/>
+
+<h3>The Grammar</h3>
+
+<p>Here is a definition of the grammar used to parse AsciiMath expressions.
+	In the Backus-Naur form given below, the letter on the left of the
+	<code>::=</code> represents a category of symbols that could be one
+	of the possible sequences of symbols listed on the right.
+	The vertical bar <code>|</code> separates the alternatives.</p>
+
+<pre id=grammar>
+c ::= [A-z] | numbers | greek letters | other constant symbols (see below)
 u ::= 'sqrt' | 'text' | 'bb' |     other unary symbols for font commands
 b ::= 'frac' | 'root' | 'stackrel' binary symbols
 l ::= ( | [ | { | (: | {:          left brackets
 r ::= ) | ] | } | :) | :}          right brackets
 S ::= c | lEr | uS | bSS | "any"   simple expression
-E ::= SE | S/S | S_S | S^S | S_S^S  expression (fraction, sub-, super-, subsuperscript)
-</code></pre>
-      </section>
+E ::= SE | S/S | S_S | S^S | S_S^S expression (fraction, sub-, super-, subsuperscript)
+</pre>
 
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
-  </body>
+</section>
+
+</article>
+</div>
+
+<script
+	src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML.js">
+</script>
+<script src="js/index.js"></script>
+
+</body>
 </html>
