--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<li>
 			Use <a href=http://mathjax.org/>MathJax</a> to render your formulas.
 			MathJax is a full fledged open source JavaScript display engine for
-			mathematics and works in all browsers.<br/>
+			mathematics and <strong>works in all browsers.</strong><br/>
 			This is the recommended approach!
 		</li>
 		<li>
@@ -76,9 +76,9 @@
 				notation and (some) LaTeX to Presentation MathML. The conversion
 				is done while the HTML page loads.</p>
 
-			<mark>Attention: Currently this only works in
+			<mark><strong>Attention:</strong> Currently this only works in
 				Firefox 3+ and Safari 5.1+ and an implementation for Chrome is
-				<a href=https://chromestatus.com/features/5240822173794304>
+				<a href=http://chromestatus.com/features/5240822173794304>
 					no longer pursued
 				</a>.
 			</mark>
@@ -781,7 +781,7 @@
 <h3>Standard Functions</h3>
 
 <p>sin, cos, tan, csc, sec, cot, sinh, cosh,
-tanh, log, ln, det, dim, lim, mod, gcd, lcm, min, max</p>
+	tanh, log, ln, det, dim, lim, mod, gcd, lcm, min, max</p>
 
 <br/>
 
