Added some special syntax cases

--- a/index.html
+++ b/index.html
@@ -775,15 +775,32 @@
 	</tr>
 	</tbody>
 </table>
-
 <br/>
+
+
+<h3>Special Cases</h3>
+
+<p>Matrices: <code>[[a,b],[c,d]]</code> yields to `[[a,b],[c,d]]`</p>
+
+<p>Column vectors: <code>((a,b),(c,d))</code> yields to `((a,b),(c,d))`</p>
+
+<p>Complex subscripts: <code>lim_(x->oo)</code> yields to `lim_(x->oo)`</p>
+
+<p>Subscripts must come before superscripts:
+	<code>int_0^1 f(x)dx</code> yields to `int_0^1 f(x)dx`</p>
+
+<p>Attention: Always try to surround the <code>&gt;</code> and
+	<code>&lt;</code> characters with spaces so that the html parser does not
+	confuse it with an opening or closing tag!</p>
+<br/>
+
 
 <h3>Standard Functions</h3>
 
 <p>sin, cos, tan, csc, sec, cot, sinh, cosh,
 	tanh, log, ln, det, dim, lim, mod, gcd, lcm, min, max</p>
-
 <br/>
+
 
 <h3>The Grammar</h3>
 
