--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>AsciiMath</title>
-	<link href='http://fonts.googleapis.com/css?family=Jockey+One|Quicksand|Asap'
+	<link href='http://fonts.googleapis.com/css?family=Quicksand'
 	      rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/screen.css"/>
 </head>
@@ -29,7 +29,7 @@
 <section id="about">
 	<h2>About</h2>
 
-	<p>AsciiMath is an easy to write markup language for mathematics.<br>
+	<p>AsciiMath is an easy-to-write markup language for mathematics.<br>
 		Try it out in the interactive renderer:</p>
 
 	<div class="leftColumn">
@@ -58,10 +58,22 @@
 
 	<ol>
 		<li>
-			Use <a href=http://mathjax.org/>MathJax</a> to render your formulas.
-			MathJax is a full fledged open source JavaScript display engine for
-			mathematics and <strong>works in all browsers.</strong><br/>
-			This is the recommended approach!
+			<p>Use <a href=http://mathjax.org/>MathJax</a> to render your formulas.
+				MathJax is a full fledged open source JavaScript display engine for
+				mathematics and <strong>works in all browsers.</strong><br/>
+				This is the recommended approach!</p>
+
+			<p>Get started by loading the default AsciiMath configuration:</p>
+
+			<p>
+				<code>&lt;script
+					src=&quot;http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML&quot;&gt;&lt;/script&gt;</code>
+			</p>
+
+			<p>Text in you HTML enclosed in <code>`</code> (backticks) will now get
+				rendered as a math formula. The math delimiters can also be customized.
+				Check out the <a href=http://mathjax.org/>MathJax</a> website for more
+				information!</p>
 		</li>
 		<li>
 			<p>Load the AsciiMath javascript file
@@ -69,19 +81,25 @@
 				in either the <code>head</code> or the <code>body</code>
 				tag of your website like this:</p>
 
-			<p><code>&lt;script type=&quot;text/javascript&quot;
-				src=&quot;ASCIIMathML.js&quot;&gt;&lt;/script&gt;</code></p>
+			<p>
+				<code>&lt;script
+					src=&quot;ASCIIMathML.js&quot;&gt;&lt;/script&gt;</code>
+			</p>
 
 			<p>This file contains JavaScript to convert AsciiMath
 				notation and (some) LaTeX to Presentation MathML. The conversion
 				is done while the HTML page loads.</p>
 
-			<mark><strong>Attention:</strong> Currently this only works in
-				Firefox 3+ and Safari 5.1+ and an implementation for Chrome is
-				<a href=http://chromestatus.com/features/5240822173794304>
-					no longer pursued
-				</a>.
-			</mark>
+			<p>
+				<mark><strong>Attention:</strong> Currently this only works in
+					Firefox 3+ and Safari 5.1+
+				</mark>
+			</p>
+
+			<p>As HTML5 including MathML has currently become an official
+				recommendation, the remaining browsers are likely to follow with
+				first implementations soon!</p>
+
 		</li>
 	</ol>
 </section>
