Optimized website for mobile

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<link href='http://fonts.googleapis.com/css?family=Quicksand'
 	      rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/screen.css"/>
+	<meta name="viewport"
+	      content="width=device-width, initial-scale=0.8,
+	      minimum-scale=0.8, maximum-scale=10">
 </head>
 <body>
 
