--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>AsciiMath</title>
+  	<title>AsciiMath</title>
+        <script async
+	      src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML.js-full">
+        </script>
 	<link href='http://fonts.googleapis.com/css?family=Quicksand'
 	      rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/screen.css"/>
@@ -846,9 +849,6 @@ E ::= SE | S/S | S_S | S^S | S_S^S expression (fraction, sub-, super-, subsupers
 </article>
 </div>
 
-<script
-	src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML.js">
-</script>
 <script src="js/index.js"></script>
 
 </body>
