--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
   	<title>AsciiMath</title>
         <script async
-	      src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML-full.js">
+	      src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML-full.js">
         </script>
 	<link href='http://fonts.googleapis.com/css?family=Quicksand'
 	      rel='stylesheet' type='text/css'>
