--- a/index.html
+++ b/index.html
@@ -1,33 +1,39 @@
 <!doctype html>
-<html lang="en-US">
+<html lang=en-US>
 <head>
-	<meta charset="UTF-8">
-  	<title>AsciiMath</title>
-      	<script>
-      		window.MathJax = {
-              AuthorInit: function() {
-                MathJax.Hub.Register.StartupHook("End", function() {
-                  MathJax.Hub.processSectionDelay = 0;
-                  var demoSource = document.getElementById('demoSource');
-                  var demoRendering = document.getElementById('demoRendering');
-                  var math = MathJax.Hub.getAllJax("demoRendering")[0];
-                  demoSource.addEventListener('input', function() {
-                    MathJax.Hub.Queue(["Text", math, demoSource.value]);
-                  });
-                });
-              }
-            };
-      	</script>
-        <script async
-	      src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML-full.js">
-        </script>
-	<link href='http://fonts.googleapis.com/css?family=Quicksand'
-	      rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="css/screen.css"/>
-	<meta name="viewport"
-	      content="width=device-width, initial-scale=0.8,
-	      minimum-scale=0.8, maximum-scale=10">
-</head>
+	<meta charset=UTF-8>
+	<title>AsciiMath</title>
+	<script>
+		window.MathJax = {
+				AuthorInit: function() {
+					MathJax.Hub.Register.StartupHook('End', function() {
+						MathJax.Hub.processSectionDelay = 0
+						var demoSource = document.getElementById('demoSource')
+						var demoRendering = document.getElementById('demoRendering')
+						var math = MathJax.Hub.getAllJax('demoRendering')[0]
+						demoSource.addEventListener('input', function() {
+							MathJax.Hub.Queue(['Text', math, demoSource.value])
+						})
+					})
+				}
+			}
+	</script>
+	<script async
+	src=https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML-full.js>
+	</script>
+
+	<link
+		rel=icon
+		href=img/favicon.ico
+		sizes="16x16 32x32 48x48 64x64 128x128"
+		type=image/x-icon>
+	<link href=http://fonts.googleapis.com/css?family=Quicksand
+			rel=stylesheet type=text/css>
+	<link rel=stylesheet href=css/screen.css>
+	<meta name=viewport
+			content="width=device-width, initial-scale=0.8,
+			minimum-scale=0.8, maximum-scale=10">
+	</head>
 <body>
 
 <a id="forkMe" href="https://github.com/mathjax/asciimathml">
