--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			}
 	</script>
 	<script async
-	src=https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML-full.js>
+	src=https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=AM_HTMLorMML-full.js>
 	</script>
 
 	<link
