Remove duplicate of "standard functions"

--- a/index.html
+++ b/index.html
@@ -1058,7 +1058,7 @@
 
 <h3>Standard Functions</h3>
 
-<p>Standard functions: sin, cos, tan, sec, csc, cot, 
+<p>sin, cos, tan, sec, csc, cot, 
 arcsin, arccos, arctan, sinh, cosh, tanh, sech, csch, coth, exp, log, ln,
 det, dim, mod, gcd, lcm, lub, glb, min, max, f, g.</p>
 
