Add missing symbols. Fixes #21

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 	</tr>
 	<tr>
 		<td>\\</td>
-		<td>backslash</td>
+		<td>backslash<br/>setminus</td>
 		<td>`\\`</td>
 	</tr>
 	<tr>
@@ -210,6 +210,7 @@
 		<td>bowtie</td>
 		<td>`|&gt;&lt;|`</td>
 	</tr>
+	
 	<tr>
 		<td>@</td>
 		<td>circ</td>
@@ -355,15 +356,16 @@
 		<td></td>
 		<td>`aleph`</td>
 	</tr>
-	<tr>
-		<td>/_</td>
-		<td>angle</td>
-		<td>`/_`</td>
-	</tr>
+	
 	<tr>
 		<td>:.</td>
 		<td>therefore</td>
 		<td>`:.`</td>
+	</tr>
+	<tr>
+		<td>:'</td>
+		<td>because</td>
+		<td>`:'`</td>
 	</tr>
 	<tr>
 		<td>|...|</td>
@@ -394,6 +396,21 @@
 		<td>|quad|</td>
 		<td></td>
 		<td>`|quad|`</td>
+	</tr>
+	<tr>
+		<td>/_</td>
+		<td>angle</td>
+		<td>`/_`</td>
+	</tr>
+	<tr>
+		<td>frown</td>
+		<td></td>
+		<td>`frown`</td>
+	</tr>
+	<tr>
+		<td>/_\</td>
+		<td>triangle</td>
+		<td>`/_\\`</td>
 	</tr>
 	<tr>
 		<td>diamond</td>
@@ -503,11 +520,20 @@
 		<td>prec</td>
 		<td>`-&lt;`</td>
 	</tr>
-
+	<tr>
+		<td>-&lt;=</td>
+		<td>preceq</td>
+		<td>`-&lt;=`</td>
+	</tr>
 	<tr>
 		<td>&gt;-</td>
 		<td>succ</td>
 		<td>`&gt;-`</td>
+	</tr>
+	<tr>
+		<td>&gt;-=</td>
+		<td>succeq</td>
+		<td>`&gt;-=`</td>
 	</tr>
 	<tr>
 		<td>in</td>
