Reword browsers compatibility warning, add link to more detailed info

--- a/index.html
+++ b/index.html
@@ -119,14 +119,15 @@
 				is done while the HTML page loads.</p>
 
 			<p>
-				<mark><strong>Attention:</strong> Currently this only works in
-					Firefox 3+ and Safari 5.1+
+				<mark><strong>Attention:</strong> Currently,
+					<a href="https://caniuse.com/#feat=mathml">this only works
+					in Firefox and Safari</a>.
 				</mark>
 			</p>
 
 			<p>While HTML5 now includes MathML as an official
 				recommendation, the remaining browsers do not appear to be
-				implementing it.  For widest browser compatability, the use
+				implementing it. For widest browser compatibility, the use
 				of MathJax is recommended.</p>
 
 		</li>
