--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			}
 	</script>
 	<script async
-	src=https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=AM_HTMLorMML-full.js>
+	src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=AM_CHTML-full">
 	</script>
 
 	<link
@@ -95,10 +95,14 @@
 
 			<p>
 				<code>&lt;script
-					src=&quot;https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML&quot;&gt;&lt;/script&gt;</code>
+					src=&quot;https://path/to/MathJax.js?config=AM_CHTML&quot;&gt;&lt;/script&gt;</code>
 			</p>
-
-			<p>Text in you HTML enclosed in <code>`</code> (backticks) will now get
+	
+			<p>Visit the MathJax <a href="http://docs.mathjax.org/en/latest/start.html">Getting Started</a> 
+				page to find the lastest URL for a CDN-hosted version of MathJax, or to learn how to
+				install MathJax on your server.</p> 
+				
+			<p>Text in your HTML enclosed in <code>`</code> (backticks) will now get
 				rendered as a math formula. The math delimiters can also be customized.
 				Check out the <a href=https://mathjax.org/>MathJax</a> website for more
 				information!</p>
@@ -120,13 +124,13 @@
 
 			<p>
 				<mark><strong>Attention:</strong> Currently this only works in
-					Firefox 3+ and Safari 5.1+
+					Firefox and Safari.  
 				</mark>
 			</p>
 
 			<p>While HTML5 now includes MathML as an official
 				recommendation, the remaining browsers do not appear to be
-				implementing it.  For widest browser compatability, the use
+				implementing it.  For widest browser compatibility, the use
 				of MathJax is recommended.</p>
 
 		</li>
