Update CDN URL (again)
Use the `latest.js` version.  Closes #23

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			}
 	</script>
 	<script async
-	src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=AM_CHTML-full">
+	src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=AM_CHTML-full">
 	</script>
 
 	<link
@@ -95,12 +95,11 @@
 
 			<p>
 				<code>&lt;script
-					src=&quot;https://path/to/MathJax.js?config=AM_CHTML&quot;&gt;&lt;/script&gt;</code>
+					src=&quot;https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=AM_CHTML&quot;&gt;&lt;/script&gt;</code>
 			</p>
 	
 			<p>Visit the MathJax <a href="http://docs.mathjax.org/en/latest/start.html">Getting Started</a> 
-				page to find the lastest URL for a CDN-hosted version of MathJax, or to learn how to
-				install MathJax on your server.</p> 
+				page to find other CDN options , or to learn how to install MathJax locally on your server.</p> 
 				
 			<p>Text in your HTML enclosed in <code>`</code> (backticks) will now get
 				rendered as a math formula. The math delimiters can also be customized.
