Add augmented matrix example

--- a/index.html
+++ b/index.html
@@ -1099,6 +1099,8 @@ det, dim, mod, gcd, lcm, lub, glb, min, max, f, g.</p>
 
 <p>Column vectors: <code>((a),(b))</code> yields to `((a),(b))`</p>
 
+<p>Augmented matrices: <code>[[a,b,|,c],[d,e,|,f]]</code> yields to `[[a,b,|,c],[d,e,|,f]]`</p>
+
 <p>Matrices can be used for layout:
  <code>{(2x,+,17y,=,23),(x,-,y,=,5):}</code> yields
  `{(2x,+,17y,=,23),(x,-,y,=,5):}`</p>
