Document mlt, mgt symbols
Reflects asciimath/asciimathml#99

--- a/index.html
+++ b/index.html
@@ -519,6 +519,16 @@
 		<td>`&gt;=`</td>
 	</tr>
 	<tr>
+		<td>mlt</td>
+		<td>ll</td>
+		<td>`mlt`</td>
+	</tr>
+	<tr>
+		<td>mgt</td>
+		<td>gg</td>
+		<td>`mgt`</td>
+	</tr>
+	<tr>
 		<td>-&lt;</td>
 		<td>prec</td>
 		<td>`-&lt;`</td>
