Add tilde x and tex alt for font commands

--- a/index.html
+++ b/index.html
@@ -876,6 +876,11 @@
 		<td>`vec x`</td>
 	</tr>
 	<tr>
+		<td>tilde x</td>
+		<td></td>
+		<td>`tilde x`</td>
+	</tr>
+	<tr>
 		<td>dot x</td>
 		<td></td>
 		<td>`dot x`</td>
@@ -1063,32 +1068,39 @@
 	<thead>
 	<tr>
 		<th>Type</th>
+		<th>TeX alt</th>
 		<th>See</th>
 	</tr>
 	</thead>
 	<tbody>
 	<tr>
 		<td>bb "AaBbCc"</td>
+		<td>mathbf "AaBbCc"</td>
 		<td>`bb "AaBbCc"`</td>
 	</tr>
 	<tr>
 		<td>bbb "AaBbCc"</td>
+		<td>mathbb "AaBbCc"</td>
 		<td>`bbb "AaBbCc"`</td>
 	</tr>
 	<tr>
 		<td>cc "AaBbCc"</td>
+		<td>mathcal "AaBbCc"</td>
 		<td>`cc "AaBbCc"`</td>
 	</tr>
 	<tr>
 		<td>tt "AaBbCc"</td>
+		<td>mathtt "AaBbCc"</td>
 		<td>`tt "AaBbCc"`</td>
 	</tr>
 	<tr>
 		<td>fr "AaBbCc"</td>
+		<td>mathfrak "AaBbCc"</td>
 		<td>`fr "AaBbCc"`</td>
 	</tr>
 	<tr>
 		<td>sf "AaBbCc"</td>
+		<td>mathsf "AaBbCc"</td>
 		<td>`sf "AaBbCc"`</td>
 	</tr>
 	</tbody>
