Update notice on browsers that support MathML.

--- a/index.html
+++ b/index.html
@@ -121,16 +121,9 @@
 				notation and (some) LaTeX to Presentation MathML. The conversion
 				is done while the HTML page loads.</p>
 
-			<p>
-				<mark><strong>Attention:</strong> Currently this only works in
-					Firefox and Safari.  
-				</mark>
-			</p>
-
-			<p>While HTML5 now includes MathML as an official
-				recommendation, the remaining browsers do not appear to be
-				implementing it.  For widest browser compatibility, the use
-				of MathJax is recommended.</p>
+			<p>Almost all recent browsers support MathML out of the box.
+				For more information on browser compatibility, see the 
+				<a href="https://developer.mozilla.org/en-US/docs/Web/MathML/Element/math#browser_compatibility">MDN web docs</a>.</p>
 
 		</li>
 	</ol>
