Add overarc to index.html

--- a/index.html
+++ b/index.html
@@ -911,6 +911,11 @@
 		<td>`obrace(1+2)`</td>
 	</tr>
 	<tr>
+		<td>overarc(AB)</td>
+		<td>overparen(AB)</td>
+		<td>`overarc(AB)`</td>
+	</tr>
+	<tr>
 		<td>color(red)(x)</td>
 		<td></td>
 		<td>`color(red)(x)`</td>
